# Liteshi

./: .gitignore  Cargo.toml  README.md  build.rs
rules/: stvemillertime_ConventionEngine.yar
rules/airbnb_binaryalert/: $macho.yara
rules/airbnb_binaryalert/hacktool/macos/: hacktool_macos_macpmem.yara
rules/airbnb_binaryalert/hacktool/windows/: $hacktool_windowS_cobaltstrike_template.yara  hacktool_windows_cobaltstrike_artifact.yara  hacktool_windows_cobaltstrike_beacon.yara
rules/airbnb_binaryalert/malware/macos/: malware_macos_apt_sofacy_xagent.yara  malware_macos_proton_rat_generic.yara
rules/fr0gger-Yara-Unprotect/: Detect_InjectCode_Unprotect.yar  packers.yar
rules/kevoreilly_CAPEv2/: AuroraStealer.yar
rules/malpedia/: win.lactrodectus_auto.yar  win.shatteredglass_auto.yar
samples/vm_detection/: Cargo.toml
samples/vm_detection/src/: inside_vm.rs  main.rs
src/: main.rs
