[package]
name = "liteshi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
serde = "1.0.204"
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
walkdir = "2.5.0"
yara-x = "0.5.0"

[build-dependencies]
walkdir = "2.5.0"
yara-x = "0.5.0"
